--- a/style.css
+++ b/style.css
@@ -1,6 +1,34 @@
 html {
   font-family: "Open Sans", Sans; }
 
+a {
+  color: #f93; }
+
+body {
+  margin-left: 0;
+  margin-right: 0;
+  margin-top: 0; }
+
+.button, .button-primary {
+  background-color: white;
+  border: 1px solid black;
+  position: relative;
+  padding-top: .25em;
+  padding-bottom: .25em;
+  box-shadow: 1px 1px 1px #666666; }
+  .button:hover:active, .button-primary:hover:active {
+    box-shadow: none;
+    border-width: 1px 1px 1px 1px;
+    top: 1px;
+    left: 1px;
+    padding-left: 8px;
+    padding-right: 8px; }
+
+.button-primary {
+  border-color: #662900;
+  background-color: #f60;
+  box-shadow: 1px 1px 1px #662900; }
+
 .ability-row {
   padding-bottom: 1em;
   background-color: white;
@@ -45,20 +73,68 @@ html {
       .ability-row .right .mod-reset .mod {
         margin: 0;
         margin-bottom: 1em; }
-  .ability-row button {
-    background-color: white;
-    border-style: solid;
-    border-width: 1px;
-    border-color: black;
-    position: relative;
-    padding-top: .25em;
-    padding-bottom: .25em;
-    box-shadow: 1px 1px black; }
-    .ability-row button:hover:active {
-      box-shadow: none;
-      top: 1px;
-      left: 1px;
-      padding-left: 8px;
-      padding-right: 8px; }
+
+.headerbox-relative {
+  z-index: 10;
+  position: relative;
+  background-color: white;
+  margin-bottom: 2em; }
+  .headerbox-relative .title {
+    font-size: 18pt;
+    text-align: center;
+    font-variant-caps: small-caps;
+    margin-top: 0;
+    padding-top: 1em; }
+  .headerbox-relative .container {
+    display: flex;
+    align-items: center;
+    justify-items: center; }
+    .headerbox-relative .container .menu-wrapper {
+      flex-grow: 1;
+      display: flex;
+      justify-content: center; }
+    .headerbox-relative .container .points-remaining {
+      flex-grow: 1;
+      text-align: center; }
+      .headerbox-relative .container .points-remaining .point-pool {
+        display: inline-block;
+        font-size: 32pt;
+        margin-bottom: 0;
+        margin-top: 0; }
+      .headerbox-relative .container .points-remaining .points-text {
+        display: inline-block;
+        flex-direction: column;
+        justify-content: center;
+        font-size: 12pt;
+        text-align: center;
+        padding: 1em; }
+
+.headerbox-fixed {
+  background-color: white;
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 50px;
+  box-shadow: 0px -5px 9px black; }
+  .headerbox-fixed * {
+    display: flex;
+    justify-content: center; }
+  .headerbox-fixed .points-remaining {
+    font-size: 10pt;
+    width: 20%;
+    justify-content: center; }
+  .headerbox-fixed h2 {
+    width: 50%;
+    font-size: 11pt;
+    text-align: center;
+    justify-content: center; }
+  .headerbox-fixed .menu-wrapper {
+    justify-content: center;
+    width: 30%; }
 
 /*# sourceMappingURL=style.css.map */
