--- a/style.scss
+++ b/style.scss
@@ -2,10 +2,52 @@ html {
 	font-family: "Open Sans", Sans;
 }
 
+$media-break-1: 320px;
+$media-break-2: 480px;
+$media-break-3: 768px;
+
 $background: white;
+$text: black;
+$shadow: lighten($text, 40%);
+
 $primary-color: #f60;
+$primary-shadow: darken($primary-color, 30%);
 $link-color: #f93;
 $font-family: "Open Sans", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;	
+
+a {
+	color: $link-color;
+}
+
+body {
+	margin-left: 0;
+	margin-right: 0;
+	margin-top: 0;
+}
+
+.button {
+	background-color: $background;
+	border: 1px solid black;
+	position: relative;
+	padding-top: .25em;
+	padding-bottom: .25em;
+	box-shadow: 1px 1px 1px $shadow;
+	&:hover:active {
+		box-shadow: none;
+		border-width: 1px 1px 1px 1px;
+		top:  1px;
+		left: 1px;
+		padding-left: 8px;
+		padding-right: 8px;
+	}
+}
+
+.button-primary {
+	@extend .button;
+	border-color: $primary-shadow;
+	background-color: $primary-color;
+	box-shadow: 1px 1px 1px $primary-shadow;
+}
 
 .ability-row {
 	padding-bottom: 1em;
@@ -69,25 +111,86 @@ $font-family: "Open Sans", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, 
 			}
 		}
 	}
+} 
 
-	button {
-		background-color: $background;
-		border-style: solid;
-		border-width: 1px;
-		border-color: black;
-		position: relative;
+.headerbox-relative {
+	z-index: 10;
+	position: relative;
+	background-color: $background;
+	margin-bottom: 2em;
+	.title {
+		font-size: 18pt;
+		text-align: center;
+		font-variant-caps: small-caps;
+		margin-top: 0;
+		padding-top: 1em;
+	}
+	
+	.container {
+		display: flex;
+		align-items: center;
+		justify-items: center;
 		
-		padding-top: .25em;
-		padding-bottom: .25em;
-		
-		box-shadow: 1px 1px black;
-		
-		&:hover:active {
-			box-shadow: none;
-			top:  1px;
-			left: 1px;
-			padding-left: 8px;
-			padding-right: 8px;
+		.menu-wrapper {
+			flex-grow: 1;
+			display: flex;
+			justify-content: center;
 		}
+		
+		.points-remaining {
+			flex-grow: 1;
+			text-align: center;
+			.point-pool {
+				display: inline-block;
+				font-size: 32pt;
+				margin-bottom: 0;
+				margin-top: 0;
+			}
+			.points-text {
+				display: inline-block;
+				flex-direction: column;
+				justify-content: center;
+				font-size: 12pt;
+				text-align: center;
+				padding: 1em;
+			}
+		}
+		
+	}
+}
+
+.headerbox-fixed {
+	background-color: $background;
+	position: fixed;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	z-index: 1;
+	top: 0;
+	left: 0;
+	right: 0;
+	height: 50px;
+	box-shadow: 0px -5px 9px black;
+	
+	* {
+		display: flex;
+		justify-content: center;
+	}
+	
+	.points-remaining {
+		font-size: 10pt;
+		width: 20%;
+		justify-content: center;
+	}
+	
+	h2 {
+	 width: 50%;
+	 font-size: 11pt;
+		text-align: center;
+		justify-content: center;
+	}
+	.menu-wrapper {
+		justify-content: center;
+		width: 30%;
 	}
 }
